--- a/Matchez/Matchez.csproj
+++ b/Matchez/Matchez.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.8.11" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.15" />
+    <PackageReference Include="PuppeteerSharp" Version="1.20.0" />
   </ItemGroup>
 
 </Project>
