--- a/Matchez/Matchez.csproj
+++ b/Matchez/Matchez.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.15" />
     <PackageReference Include="PuppeteerSharp" Version="1.20.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="77.0.3865.4000" />
   </ItemGroup>
 
 </Project>
