--- a/Matchez/Matchez.csproj
+++ b/Matchez/Matchez.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="4.5.3.2" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.15" />
     <PackageReference Include="PuppeteerSharp" Version="1.20.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
