--- a/Matchez/Matchez.csproj
+++ b/Matchez/Matchez.csproj
@@ -9,7 +9,8 @@
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="EPPlus" Version="5.1.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.23" />
-    <PackageReference Include="PuppeteerSharp" Version="2.0.2" />
+    <PackageReference Include="Neo4jClient" Version="3.1.0.6" />
+    <PackageReference Include="PuppeteerSharp" Version="2.0.3" />
     <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.26.0" />
     <PackageReference Include="Selenium.Opera.WebDriver" Version="2.30.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
