--- a/Matchez/Matchez.csproj
+++ b/Matchez/Matchez.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.23" />
     <PackageReference Include="Neo4jClient" Version="3.1.0.6" />
     <PackageReference Include="PuppeteerSharp" Version="2.0.3" />
+    <PackageReference Include="RestSharp" Version="106.10.1" />
     <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.26.0" />
     <PackageReference Include="Selenium.Opera.WebDriver" Version="2.30.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
